avBooth/simultaneous-questions-screen-directive/simultaneous-questions-screen-directive.less
/**
 * This file is part of agora-gui-booth.
 * Copyright (C) 2015-2016  Agora Voting SL <agora@agoravoting.com>

 * agora-gui-booth is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License.

 * agora-gui-booth  is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.

 * You should have received a copy of the GNU Affero General Public License
 * along with agora-gui-booth.  If not, see <http://www.gnu.org/licenses/>.
**/

[avb-simultaneous-questions-screen] {

  .left-border {
    border-left: 1px solid @gray;
  }

  .avb-content .options-row {
    padding-bottom: 20px;

    .question-description {
      border: 1px solid;
      padding: 10px;
      margin: 10px;
    }
  }

  // TODO: the following two nth-child changes are to put together the options
  // when there are only two
  .question-answers.group-pairs .question-answer:nth-child(odd) .opt
  {
    text-align: right;
    padding-right: 30px;
  }

  .question-answers.group-pairs .question-answer:nth-child(even) .opt
  {
    text-align: left;
    padding-left: 30px;
  }

  .vertilize-col {
    padding: 0;
    vertical-align: middle;
  }

  // answer styles
  .opt {
    font-size: 20px;
    text-align: left;
    padding: 5px;
    cursor: pointer;
    display: inline-block;

    &:hover {
      background-color: @gray-lighter;
    }

    &:focus {
      border: none;
    }

    .answer-glyphicon .glyphicon {
      font-size: 30px;
      margin-right: 10px;
    }
  
    .answer-image {
      img {
        max-height: 130px;
        max-width: 130px;
        padding-left: 10px;
        padding-right: 10px;
      }
    }

    .answer-texts {
      box-sizing: border-box;
      padding-left: 10px;
      width: 100%;

      .answer-text {
        font-size: 18px;
        font-weight: bold;
      }

      .answer-details {
        font-size: 14px;
      }
    }

    .answer-links {
      .btn {
        border: none;
        text-decoration: underline;
        background: transparent;
      }
    }
  }

  // question separator style
  .question-separator-dots {
    width: 100%;
    display: block;
    clear: both;
    float: left;
    font-style: italic;
    font-size: 16px;
    font-weight: normal;
    margin-top: 20px;
    border-top: 1px solid #c0c0c0;

    span {
      display: block;
      width: 100%;
      text-align: center;
      margin-top: -12px;
    }
  }

  .categories {
    clear: both;
  }

  .category {
    margin-top: 25px;
  }

  .category-heading {
    font-weight: bold;
    text-decoration: underline;
    font-size: 20px;
  }

  .category-body {
  }

  [av-affix-bottom] {
    max-height: 150px;
  }
}

